# tiger_factors

./: README.md  __init__.py  __main__.py  pyproject.toml  report_paths.py
examples/: allocator.py  alpha101_8factor_strategy_demo.py  alpha101_factor_store_full_demo.py  alpha101_holdings_snapshot_demo.py  alpha101_indicator_run.py  alpha101_multifactor_portfolio_demo.py  alpha101_pca_combo_portfolio_demo.py  alpha101_pca_demo.py  alpha101_screened_asset_coverage_demo.py  alpha101_smoothed_screening.py  alpha101_summary_store_multifactor_demo.py  alpha101_tiger_us_stock_1d_screener_allocation_backtest_demo.py  alpha_hacking_posterior_demo.py  bayes_multiple_testing_demo.py  create_adj_price.py  csm_factor_frame_research_demo.py  csm_model_backtest_demo.py  csm_model_demo.py  csm_model_portfolio_demo.py  factor_evaluation_demo2.py  factor_evaluation_sample_demo.py  factor_frame_definition_demo.py  factor_frame_definition_registry_demo.py  factor_frame_demo.py  factor_frame_group_demo.py  factor_frame_group_research.py  factor_frame_screen_evaluation_demo.py  factor_frame_sector_screen_demo.py  factor_frame_sector_screen_fetch_demo.py  factor_library.py  factor_panels.py  factor_portfolio_workflow_demo.py  factor_screener_multifactor_demo.py  factor_store_multi_factor_backtest_demo.py  factor_store_multi_factor_demo.py  factor_store_multi_factor_reporting.py  financial_factor_engine.py  grouped_factor_engine_demo.py  grouped_factor_registry_demo.py  hierarchical_bayes_multiple_testing_demo.py  (+18 more)
factor_algorithm/: README.md  __init__.py  fama6_loop.py
factor_frame/: csm.py  (+10 more)
(+289 files in other folders)
